kubernetes/apps/cilium/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-zerotrust-baseline
spec:
  description: "Enforces strict egress rules to Pi-hole DNS sinkhole and allows inter-pod mTLS"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDR:
        - 192.168.1.4/32 # Pi-hole DNS Sinkhole
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
